Refactor Supabase auth integration to work with Next.js 15 and latest @supabase/ssr, fixing cookie handling, middleware, and type errors.
	•	Updated supabase-server.ts to use getAll / setAll cookie API (async cookies in Next 15).
	•	Updated middleware.ts to handle session refresh with new cookie adapter.
	•	Updated auth/callback/route.ts to properly exchange PKCE code for session and set cookies.
	•	Fixed debug/session/page.tsx to await createClientServer Promise.
	•	Adjusted tsconfig.json to resolve missing type definition errors (estree, json-schema, etc.) by limiting types to node.
	•	Verified login flow works with both magic link and Google OAuth.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "jsx": "preserve",
     "incremental": true,
     "plugins": [{ "name": "next" }],
-    "baseUrl": ".",                 // 👈 add this
-    "paths": { "@/*": ["./src/*"] } // keep this
+    "baseUrl": ".",
+    "paths": { "@/*": ["./src/*"] },
+    "types": ["node"]            // ✅ limit ambient types to Node only
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
