--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.55.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.540.0",
     "next": "15.4.6",
     "next-sitemap": "^4.2.3",
     "react": "19.1.0",
@@ -26,9 +27,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5"
   },
   "packageManager": "npm@10.9.3"
