--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "typecheck": "tsc --noEmit",
+    "build:ci": "next build"
   },
   "dependencies": {
     "@supabase/auth-ui-react": "^0.4.7",
@@ -16,23 +18,24 @@
     "@supabase/supabase-js": "^2.55.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
-    "next": "15.4.6",
+    "next": "^15.5.2",
     "next-sitemap": "^4.2.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   },
   "packageManager": "npm@10.9.3"
 }
