--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.13",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.35.0",
-    "eslint-config-next": "^15.5.2",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.6",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.9.2"
+    "typescript": "^5"
   },
   "packageManager": "npm@10.9.3"
 }
