--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -36,6 +35,9 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.10",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18 <=22"
   },
   "packageManager": "npm@10.9.3"
 }
